--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     }
   },
   "dependencies": {
+    "@nuxt/content": "^1.14.0",
     "@nuxtjs/axios": "^5.13.1",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3"
   },
