--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@nuxtjs/axios": "^5.13.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "prism-themes": "^1.6.0"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
