--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@nuxtjs/axios": "^5.13.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.9.1",
+    "lozad": "^1.16.0",
+    "lqip-loader": "^2.2.1",
     "nuxt": "^2.15.3",
-    "prism-themes": "^1.6.0"
+    "prism-themes": "^1.6.0",
+    "webp-loader": "^0.6.0"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
@@ -41,12 +44,14 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
+    "fibers": "^5.0.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "node-sass": "^5.0.0",
     "postcss": "^8.2.8",
     "prettier": "^2.2.1",
-    "sass-loader": "10.1.1",
+    "sass": "^1.32.12",
+    "sass-loader": "^10.1.1",
     "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^21.0.0"
